# imgui-video-player

./: CMakeLists.txt  README.md
feature/: CMakeLists.txt  mser.cpp  mser.h  mser_cpu_extractor.cpp  mser_cpu_extractor.h
libs/: util.h
renderers/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  GLUtils.cpp  GLUtils.h  Points3d.cpp  Points3d.h  ViewMatrix.cpp  ViewMatrix.h  test.cpp
renderers/shaders/: PointShaders.h
src/: imgui.ini  main.cpp
ui/: Framebuffer.cpp  Framebuffer.h  controls.cpp  gl_state.cpp  gl_state.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3_01.cpp  imgui_impl_glfw_gl3_01.h  main.cpp  main_old.cpp  testgl.cpp  testgl.h  triangle_test.h
ui/shaders/: FragmentShadingRTT.h  PassthroughVT.h  VertexShadingRTT.h  WobblyTextureFS.h
video-player/: CMakeLists.txt  video_player.cpp  video_player.h  video_player.hpp
